--- a/Code/Unit3ts/package.json
+++ b/Code/Unit3ts/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "unit2ts",
+  "name": "unit3ts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "compile": "tsc -w --pretty",
-    "execute": "node build/main.js"
+    "execute": "node build/Unit3ts/main.js"
   },
   "author": "",
   "license": "ISC",
