Add untested version of blobs

--- a/Exercises/Solutions/Solutions/Solutions/Solutions.fsproj
+++ b/Exercises/Solutions/Solutions/Solutions/Solutions.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="Unit1.fs" />
     <Compile Include="Unit2.fs" />
     <Compile Include="Unit3.fs" />
+    <Compile Include="Unit4.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
